fix(): removed unused imports

--- a/SkyScanner/src/main/resources/application.properties
+++ b/SkyScanner/src/main/resources/application.properties
@@ -8,3 +8,18 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT}
 spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL}
 
+#Email verification
+SMTP_HOST=${SMTP_HOST}
+SMTP_PORT=${SMTP_PORT}
+SMTP_USERNAME=${SMTP_USERNAME}
+SMTP_PASSWORD=${SMTP_PASSWORD}
+EMAIL_VERIFICATION_LINK=${EMAIL_VERIFICATION_LINK}
+
+BUY_TICKET_LINK=${BUY_TICKET_LINK}
+
+# false - off ; true - on
+EMAIL_VERIFICATION_SWITCH=${EMAIL_VERIFICATION_SWITCH}
+EMAIL_SEND_SWITCH=${EMAIL_SEND_SWITCH}
+
+
+
